Adjust height on titles to fix overflow

--- a/styles.css
+++ b/styles.css
@@ -53,11 +53,11 @@ body {
   color: white;
   text-shadow: 2px 2px 0 black, -2px 2px 0 black, 2px -2px 0 black,
     -2px -2px 0 black;
-  padding: 0 50px;
+  padding: 0 30px;
   display: flex;
   align-self: center;
   margin-top: 40px;
-  height: 100px;
+  min-height: 100px;
   margin-bottom: 40px;
   text-align: center;
 }
